fixed label on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,7 @@ body {
 
 .label {
   display: flex;
+  text-align: left;
 }
 
 input {
@@ -163,5 +164,11 @@ input:focus, textarea:focus, select:focus {
   }
   .container {
     width: 95%;
+  }
+}
+
+@media  (max-width: 400px) {
+  input {
+    font-size: 20px;
   }
 }
